--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+img{
+ height: 250px;
+ width:450px;
+ border-radius: 10px;
+ padding-top: 30px;
 }
+ h1{
+     margin: 0px;
+    color:brown;
+    padding-right: 10px;
+    padding-right: 10px;
+} 
+.s{
+    color: blue;
+}
+.l{
+    padding-left:320px;
+    color: blue;
+}
+.div1{
+    height: 550px;
+    width: 500px;
+    background-color: rgb(150, 140, 140);
+    border-radius: 10px;
+    position: fixed;
+    padding-left: 50px;
+   
+} 
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.div2{
+    
+    background-color:white;
+    border-radius: 10px;
+    width: 450px;
+    height: 250px;
+}
+/* p{
+    display: inline;
+    background-color: white;
+} */
+p{
+    padding-left: 10px;
 }
